# genai-session

./: .env_dummy  .gitignore  agent_workflow.ipynb  basic_workflow.html  create-embeddings.py  ctx_dict.json  gen-ai-session-2025-06-11-1004.excalidraw  main.py  pyproject.toml  semantic_search.py  uv-setup.bat
data/corpus/: Oxford-Handbook-of-Oncology-4th-Ed.txt
